--- a/clicky-game/src/components/Header/Header.css
+++ b/clicky-game/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header{
-    background-image: url("../../public/assets/footer_lodyas.png");
+    background-image: url("../../assets/background/footer_lodyas.png");
     text-align: center;
     color: white;
-    padding: 50px;
+    padding: 175px 0px;
 }
