layout done, logic started

--- a/clicky-game/src/components/Footer/Footer.css
+++ b/clicky-game/src/components/Footer/Footer.css
@@ -2,6 +2,12 @@
     background-color: darkblue;
     color: white;
     position: absolute 0;
-    font-size: 12px;
+    font-size: 18px;
     text-align: center;
+    padding: 18px;
+}
+
+#logo{
+    height: 28px;
+    width: 36px;
 }
