--- a/clicky-game/src/components/Navbar/Navbar.css
+++ b/clicky-game/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
     background-color: darkblue;
     color: white;
     position: fixed;
+    top:0;
     width: 100%;
     font-size: 20px;
     box-shadow: 0 3px 6px black, 0 3px 6px #999;
